--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
 
         <activity android:name=".CreateEvent"></activity>
 
+        <activity android:name=".TestDatabase"></activity>
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
